Fixed an issue where the Maets logo (alt text) was covering the 'Install Steam' button

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -1,3 +1,8 @@
+#login {
+    display: flex;
+    justify-content: right;
+}
+
 .global-header {
     color: #C5C3C0; 
     text-decoration: none;
